src/app/views/dashboard/snapshots/negative-account/negative-account-card-detail/negative-account-card-detail.component.ts
import { Component, OnInit } from '@angular/core';

@Component({
  selector: 'brave-negative-account-card-detail',
  templateUrl: './negative-account-card-detail.component.html',
})
export class NegativeAccountCardDetailComponent implements OnInit {
  constructor() {}

  ngOnInit(): void {}
}
